force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__bathID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__bathID__c</fullName>
    <label>bathID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>