force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__DealsProcessed__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealsProcessed__c</fullName>
    <label>DealsProcessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>