force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__End__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>