force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__ImportRowsCreated__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ImportRowsCreated__c</fullName>
    <label>ImportRowsCreated</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>