force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__ImportRowsDuplicated__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ImportRowsDuplicated__c</fullName>
    <label>ImportRowsDuplicated</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>