force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__ImportRowsProcessed__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ImportRowsProcessed__c</fullName>
    <label>ImportRowsProcessed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>