force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__ImportSourceLabel__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ImportSourceLabel__c</fullName>
    <label>ImportSourceLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>