force-app/main/default/objects/XactlyExpress__XCProcess__c/fields/XactlyExpress__MaxCpuTimePercent__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MaxCpuTimePercent__c</fullName>
    <label>MaxCpuTimePercent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>