force-app/main/default/objects/XactlyExpress__XCProcess__c/listViews/XactlyExpress__All.listView-meta.xml
<ListView>
    <fullName>XactlyExpress__All</fullName>
    <columns>NAME</columns>
    <columns>XactlyExpress__DealsProcessed__c</columns>
    <columns>XactlyExpress__DealResultsCreated__c</columns>
    <columns>XactlyExpress__Status__c</columns>
    <columns>XactlyExpress__Type__c</columns>
    <columns>XactlyExpress__XCPeriod__c</columns>
    <columns>XactlyExpress__Start__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>